--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <h1>Tienda de Video</h1>
+  <h1>Tienda de Videojuegos</h1>
 
   <div class="contenedor">
     <!-- Sección de productos -->
